; vim:ft=dosini:

[metadata]
name = priorityprefix
version = attr:priorityprefix.__version__
url = https://github.com/pscl4rke/priorityprefix
description = Logging formatter to tell Journald's streams the correct severity level
long_description = file:README.md
long_description_content_type = text/markdown
licence = LGPLv3
author = P. S. Clarke
author_email = priorityprefix@pscl4rke.net

[options]
py_modules = priorityprefix
