; vim:ft=dosini:

[metadata]
name = priorityprefix
version = attr:priorityprefix.__version__
url = https://github.com/pscl4rke/priorityprefix
description = Logging formatter to tell Journald's streams the correct severity level
long_description = file:README.md
long_description_content_type = text/markdown
licence = LGPLv3
author = P. S. Clarke
author_email = priorityprefix@pscl4rke.net
classifiers =
    Topic :: System :: Logging
    Programming Language :: Python 3.6
    Programming Language :: Python 3.7
    Programming Language :: Python 3.8
    Programming Language :: Python 3.9
    Programming Language :: Python 3.10

[options]
py_modules = priorityprefix
