; vim:ft=dosini:

[metadata]
name = priorityprefix
version = attr:priorityprefix.__version__
url = https://github.com/pscl4rke/priorityprefix
project_urls =
    Source Code = https://github.com/pscl4rke/priorityprefix
    Issues = https://github.com/pscl4rke/priorityprefix/issues
description = Logging formatter to tell Journald's streams the correct severity level
long_description = file:README.md
long_description_content_type = text/markdown
licence = LGPLv3
licence_files = LICENCE.txt
license = cf:licence
license_files = cf:licence_files
author = P. S. Clarke
author_email = priorityprefix@pscl4rke.net
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Programming Language :: Python 3.6
    Programming Language :: Python 3.7
    Programming Language :: Python 3.8
    Programming Language :: Python 3.9
    Programming Language :: Python 3.10
    Topic :: System :: Logging

[options]
python_requires = >=3.6
py_modules = priorityprefix
